Align naming of metadata store