@@ -15,7 +15,7 @@
  * limitations under the License.
  */
 
-package org.finos.tracdap.common.metadata.dal;
+package org.finos.tracdap.common.metadata.store;
 
 import org.finos.tracdap.metadata.TagSelector;
 import org.finos.tracdap.metadata.ObjectType;
@@ -27,7 +27,7 @@ import java.util.Collections;
 import java.util.List;
 import java.util.UUID;
 
-import org.finos.tracdap.common.metadata.test.IDalTestable;
+import org.finos.tracdap.common.metadata.test.IMetadataStoreTest;
 import org.finos.tracdap.common.metadata.test.JdbcUnit;
 import org.finos.tracdap.common.metadata.test.JdbcIntegration;
 
@@ -39,12 +39,12 @@ import static org.finos.tracdap.test.meta.SampleMetadata.*;
 import static org.junit.jupiter.api.Assertions.*;
 
 
-abstract class MetadataDalReadTest implements IDalTestable {
+abstract class MetadataDalReadTest implements IMetadataStoreTest {
 
-    private IMetadataDal dal;
+    private IMetadataStore store;
 
-    public void setDal(IMetadataDal dal) {
-        this.dal = dal;
+    public void setStore(IMetadataStore store) {
+        this.store = store;
     }
 
     @ExtendWith(JdbcUnit.class)
@@ -65,9 +65,9 @@ abstract class MetadataDalReadTest implements IDalTestable {
         var origId = UUID.fromString(origTag.getHeader().getObjectId());
 
         // Save v1 t1, v2 t1, v2 t2
-        dal.saveNewObjects(TEST_TENANT, Collections.singletonList(origTag));
-        dal.saveNewVersions(TEST_TENANT, Collections.singletonList(nextDefTag1));
-        dal.saveNewTags(TEST_TENANT, Collections.singletonList(nextDefTag2));
+        store.saveNewObjects(TEST_TENANT, Collections.singletonList(origTag));
+        store.saveNewVersions(TEST_TENANT, Collections.singletonList(nextDefTag1));
+        store.saveNewTags(TEST_TENANT, Collections.singletonList(nextDefTag2));
 
         var selector = TagSelector.newBuilder()
                 .setObjectType(ObjectType.DATA)
@@ -78,9 +78,9 @@ abstract class MetadataDalReadTest implements IDalTestable {
         var selector2t1 = selector.setObjectVersion(2).setTagVersion(1).build();
         var selector2t2 = selector.setObjectVersion(2).setTagVersion(2).build();
 
-        var v1t1 = dal.loadObject(TEST_TENANT, selector1t1);
-        var v2t1 = dal.loadObject(TEST_TENANT, selector2t1);
-        var v2t2 = dal.loadObject(TEST_TENANT, selector2t2);
+        var v1t1 = store.loadObject(TEST_TENANT, selector1t1);
+        var v2t1 = store.loadObject(TEST_TENANT, selector2t1);
+        var v2t2 = store.loadObject(TEST_TENANT, selector2t2);
 
         var expectedTag1 = origTag.toBuilder()
                         .setHeader(origTag.getHeader().toBuilder()
@@ -108,9 +108,9 @@ abstract class MetadataDalReadTest implements IDalTestable {
         var origId = UUID.fromString(origTag.getHeader().getObjectId());
 
         // Save v1 t1, v2 t1, v2 t2
-        dal.saveNewObjects(TEST_TENANT, Collections.singletonList(origTag));
-        dal.saveNewVersions(TEST_TENANT, Collections.singletonList(nextDefTag1));
-        dal.saveNewTags(TEST_TENANT, Collections.singletonList(nextDefTag2));
+        store.saveNewObjects(TEST_TENANT, Collections.singletonList(origTag));
+        store.saveNewVersions(TEST_TENANT, Collections.singletonList(nextDefTag1));
+        store.saveNewTags(TEST_TENANT, Collections.singletonList(nextDefTag2));
 
         var selector = TagSelector.newBuilder()
                 .setObjectType(ObjectType.DATA)
@@ -121,7 +121,7 @@ abstract class MetadataDalReadTest implements IDalTestable {
         var selector2t1 = selector.setObjectVersion(2).setTagVersion(1).build();
         var selector2t2 = selector.setObjectVersion(2).setTagVersion(2).build();
 
-        var batch = dal.loadObjects(TEST_TENANT, List.of(selector1t1, selector2t1, selector2t2));
+        var batch = store.loadObjects(TEST_TENANT, List.of(selector1t1, selector2t1, selector2t2));
         var v1t1 = batch.get(0);
         var v2t1 = batch.get(1);
         var v2t2 = batch.get(2);
@@ -154,9 +154,9 @@ abstract class MetadataDalReadTest implements IDalTestable {
         Thread.sleep(1);
         var nextDefTag2 = nextTag(nextDefTag1, UPDATE_TAG_VERSION);
 
-        dal.saveNewObjects(TEST_TENANT, Collections.singletonList(origTag));
-        dal.saveNewVersions(TEST_TENANT, Collections.singletonList(nextDefTag1));
-        dal.saveNewTags(TEST_TENANT, Collections.singletonList(nextDefTag2));
+        store.saveNewObjects(TEST_TENANT, Collections.singletonList(origTag));
+        store.saveNewVersions(TEST_TENANT, Collections.singletonList(nextDefTag1));
+        store.saveNewTags(TEST_TENANT, Collections.singletonList(nextDefTag2));
 
         var origId = UUID.fromString(origTag.getHeader().getObjectId());
         var v1t1AsOf = MetadataCodec.decodeDatetime(origTag.getHeader().getTagTimestamp()).plusNanos(500000);
@@ -183,9 +183,9 @@ abstract class MetadataDalReadTest implements IDalTestable {
                 .setTagAsOf(MetadataCodec.encodeDatetime(v2t2AsOf))
                 .build();
 
-        var v1t1 = dal.loadObject(TEST_TENANT, selector1t1);
-        var v2t1 = dal.loadObject(TEST_TENANT, selector2t1);
-        var v2t2 = dal.loadObject(TEST_TENANT, selector2t2);
+        var v1t1 = store.loadObject(TEST_TENANT, selector1t1);
+        var v2t1 = store.loadObject(TEST_TENANT, selector2t1);
+        var v2t2 = store.loadObject(TEST_TENANT, selector2t2);
 
         var expectedTag1 = origTag.toBuilder()
                 .setHeader(origTag.getHeader().toBuilder()
@@ -215,9 +215,9 @@ abstract class MetadataDalReadTest implements IDalTestable {
         Thread.sleep(1);
         var nextDefTag2 = nextTag(nextDefTag1, UPDATE_TAG_VERSION);
 
-        dal.saveNewObjects(TEST_TENANT, Collections.singletonList(origTag));
-        dal.saveNewVersions(TEST_TENANT, Collections.singletonList(nextDefTag1));
-        dal.saveNewTags(TEST_TENANT, Collections.singletonList(nextDefTag2));
+        store.saveNewObjects(TEST_TENANT, Collections.singletonList(origTag));
+        store.saveNewVersions(TEST_TENANT, Collections.singletonList(nextDefTag1));
+        store.saveNewTags(TEST_TENANT, Collections.singletonList(nextDefTag2));
 
         var origId = UUID.fromString(origTag.getHeader().getObjectId());
         var v1t1AsOf = MetadataCodec.decodeDatetime(origTag.getHeader().getTagTimestamp()).plusNanos(500000);
@@ -245,7 +245,7 @@ abstract class MetadataDalReadTest implements IDalTestable {
                 .build();
 
         // Same test with batch load
-        var batch = dal.loadObjects(TEST_TENANT, List.of(selector1t1, selector2t1, selector2t2));
+        var batch = store.loadObjects(TEST_TENANT, List.of(selector1t1, selector2t1, selector2t2));
         var v1t1 = batch.get(0);
         var v2t1 = batch.get(1);
         var v2t2 = batch.get(2);
@@ -282,14 +282,14 @@ abstract class MetadataDalReadTest implements IDalTestable {
                 .setLatestTag(true)
                 .build();
 
-        dal.saveNewObjects(TEST_TENANT, Collections.singletonList(origTag));
-        var v1t1 = dal.loadObject(TEST_TENANT, selector);
+        store.saveNewObjects(TEST_TENANT, Collections.singletonList(origTag));
+        var v1t1 = store.loadObject(TEST_TENANT, selector);
 
-        dal.saveNewVersions(TEST_TENANT, Collections.singletonList(nextDefTag1));
-        var v2t1 = dal.loadObject(TEST_TENANT, selector);
+        store.saveNewVersions(TEST_TENANT, Collections.singletonList(nextDefTag1));
+        var v2t1 = store.loadObject(TEST_TENANT, selector);
 
-        dal.saveNewTags(TEST_TENANT, Collections.singletonList(nextDefTag2));
-        var v2t2 = dal.loadObject(TEST_TENANT, selector);
+        store.saveNewTags(TEST_TENANT, Collections.singletonList(nextDefTag2));
+        var v2t2 = store.loadObject(TEST_TENANT, selector);
 
         assertEquals(origTag, v1t1);
         assertEquals(nextDefTag1, v2t1);
@@ -304,7 +304,7 @@ abstract class MetadataDalReadTest implements IDalTestable {
         var extraTag = dummyTag(extraDef, INCLUDE_HEADER);
         var extraId = UUID.fromString(extraTag.getHeader().getObjectId());
 
-        dal.saveNewObjects(TEST_TENANT, Collections.singletonList(extraTag));
+        store.saveNewObjects(TEST_TENANT, Collections.singletonList(extraTag));
 
         var extraSelector = TagSelector.newBuilder()
                 .setObjectType(ObjectType.DATA)
@@ -326,16 +326,16 @@ abstract class MetadataDalReadTest implements IDalTestable {
                 .setLatestTag(true)
                 .build();
 
-        dal.saveNewObjects(TEST_TENANT, Collections.singletonList(origTag));
-        var v1t1Batch = dal.loadObjects(TEST_TENANT, List.of(selector, extraSelector));
+        store.saveNewObjects(TEST_TENANT, Collections.singletonList(origTag));
+        var v1t1Batch = store.loadObjects(TEST_TENANT, List.of(selector, extraSelector));
         var v1t1 = v1t1Batch.get(0);
 
-        dal.saveNewVersions(TEST_TENANT, Collections.singletonList(nextDefTag1));
-        var v2t1Batch = dal.loadObjects(TEST_TENANT, List.of(selector, extraSelector));
+        store.saveNewVersions(TEST_TENANT, Collections.singletonList(nextDefTag1));
+        var v2t1Batch = store.loadObjects(TEST_TENANT, List.of(selector, extraSelector));
         var v2t1 = v2t1Batch.get(0);
 
-        dal.saveNewTags(TEST_TENANT, Collections.singletonList(nextDefTag2));
-        var v2t2Batch = dal.loadObjects(TEST_TENANT, List.of(selector, extraSelector));
+        store.saveNewTags(TEST_TENANT, Collections.singletonList(nextDefTag2));
+        var v2t2Batch = store.loadObjects(TEST_TENANT, List.of(selector, extraSelector));
         var v2t2 = v2t2Batch.get(0);
 
         assertEquals(origTag, v1t1);
@@ -358,10 +358,10 @@ abstract class MetadataDalReadTest implements IDalTestable {
         Thread.sleep(1);
         var v3t1Tag = tagForNextObject(v2t1Tag, nextDataDef(v2t1Tag.getDefinition()), INCLUDE_HEADER);
 
-        dal.saveNewObjects(TEST_TENANT, Collections.singletonList(v1Tag));
-        dal.saveNewVersions(TEST_TENANT, Collections.singletonList(v2t1Tag));
-        dal.saveNewTags(TEST_TENANT, Collections.singletonList(v2t2Tag));
-        dal.saveNewVersions(TEST_TENANT, Collections.singletonList(v3t1Tag));
+        store.saveNewObjects(TEST_TENANT, Collections.singletonList(v1Tag));
+        store.saveNewVersions(TEST_TENANT, Collections.singletonList(v2t1Tag));
+        store.saveNewTags(TEST_TENANT, Collections.singletonList(v2t2Tag));
+        store.saveNewVersions(TEST_TENANT, Collections.singletonList(v3t1Tag));
 
         var origId = UUID.fromString(v1Tag.getHeader().getObjectId());
         var v2t1AsOf = MetadataCodec.decodeDatetime(v2t1Tag.getHeader().getTagTimestamp()).plusNanos(500000);
@@ -390,9 +390,9 @@ abstract class MetadataDalReadTest implements IDalTestable {
                 .setTagVersion(1)
                 .build();
 
-        var combo1 = dal.loadObject(TEST_TENANT, selectCombo1);
-        var combo2 = dal.loadObject(TEST_TENANT, selectCombo2);
-        var combo3 = dal.loadObject(TEST_TENANT, selectCombo3);
+        var combo1 = store.loadObject(TEST_TENANT, selectCombo1);
+        var combo2 = store.loadObject(TEST_TENANT, selectCombo2);
+        var combo3 = store.loadObject(TEST_TENANT, selectCombo3);
 
         var expectedTag1 = v2t2Tag.toBuilder()
                 .setHeader(v2t2Tag.getHeader().toBuilder()
@@ -425,10 +425,10 @@ abstract class MetadataDalReadTest implements IDalTestable {
         Thread.sleep(1);
         var v3t1Tag = tagForNextObject(v2t1Tag, nextDataDef(v2t1Tag.getDefinition()), INCLUDE_HEADER);
 
-        dal.saveNewObjects(TEST_TENANT, Collections.singletonList(v1Tag));
-        dal.saveNewVersions(TEST_TENANT, Collections.singletonList(v2t1Tag));
-        dal.saveNewTags(TEST_TENANT, Collections.singletonList(v2t2Tag));
-        dal.saveNewVersions(TEST_TENANT, Collections.singletonList(v3t1Tag));
+        store.saveNewObjects(TEST_TENANT, Collections.singletonList(v1Tag));
+        store.saveNewVersions(TEST_TENANT, Collections.singletonList(v2t1Tag));
+        store.saveNewTags(TEST_TENANT, Collections.singletonList(v2t2Tag));
+        store.saveNewVersions(TEST_TENANT, Collections.singletonList(v3t1Tag));
 
         var origId = UUID.fromString(v1Tag.getHeader().getObjectId());
         var v2t1AsOf = MetadataCodec.decodeDatetime(v2t1Tag.getHeader().getTagTimestamp()).plusNanos(500000);
@@ -460,7 +460,7 @@ abstract class MetadataDalReadTest implements IDalTestable {
 
         // Testing selectors with different criteria all as part of one batch
 
-        var batch = dal.loadObjects(TEST_TENANT, List.of(selectCombo1, selectCombo2, selectCombo3));
+        var batch = store.loadObjects(TEST_TENANT, List.of(selectCombo1, selectCombo2, selectCombo3));
         var combo1 = batch.get(0);
         var combo2 = batch.get(1);
         var combo3 = batch.get(2);
@@ -483,7 +483,7 @@ abstract class MetadataDalReadTest implements IDalTestable {
         var origTag = addMultiValuedAttr(dummyTag(origDef, INCLUDE_HEADER));
         var origId = UUID.fromString(origTag.getHeader().getObjectId());
 
-        dal.saveNewObjects(TEST_TENANT, Collections.singletonList(origTag));
+        store.saveNewObjects(TEST_TENANT, Collections.singletonList(origTag));
 
         var selector = TagSelector.newBuilder()
                 .setObjectType(ObjectType.DATA)
@@ -492,7 +492,7 @@ abstract class MetadataDalReadTest implements IDalTestable {
                 .setLatestTag(true)
                 .build();
 
-        var loadedTag = dal.loadObject(TEST_TENANT, selector);
+        var loadedTag = store.loadObject(TEST_TENANT, selector);
 
         assertEquals(origTag, loadedTag);
     }
@@ -508,7 +508,7 @@ abstract class MetadataDalReadTest implements IDalTestable {
         var origTag2 = addMultiValuedAttr(dummyTag(origDef2, INCLUDE_HEADER));
         var origId2 = UUID.fromString(origTag2.getHeader().getObjectId());
 
-        dal.saveNewObjects(TEST_TENANT, List.of(origTag, origTag2));
+        store.saveNewObjects(TEST_TENANT, List.of(origTag, origTag2));
 
         var selector = TagSelector.newBuilder()
                 .setObjectType(ObjectType.DATA)
@@ -524,7 +524,7 @@ abstract class MetadataDalReadTest implements IDalTestable {
                 .setLatestTag(true)
                 .build();
 
-        var batch = dal.loadObjects(TEST_TENANT, List.of(selector, selector2));
+        var batch = store.loadObjects(TEST_TENANT, List.of(selector, selector2));
         var loadedTag = batch.get(0);
         var loadedTag2 = batch.get(1);
 
@@ -544,9 +544,9 @@ abstract class MetadataDalReadTest implements IDalTestable {
         Thread.sleep(10);
         var t2Tag = nextTag(v2Tag, UPDATE_TAG_VERSION);
 
-        dal.saveNewObjects(TEST_TENANT, Collections.singletonList(v1Tag));
-        dal.saveNewVersions(TEST_TENANT, Collections.singletonList(v2Tag));
-        dal.saveNewTags(TEST_TENANT, Collections.singletonList(t2Tag));
+        store.saveNewObjects(TEST_TENANT, Collections.singletonList(v1Tag));
+        store.saveNewVersions(TEST_TENANT, Collections.singletonList(v2Tag));
+        store.saveNewTags(TEST_TENANT, Collections.singletonList(t2Tag));
 
         var origId = UUID.fromString(v1Tag.getHeader().getObjectId());
 
@@ -565,10 +565,10 @@ abstract class MetadataDalReadTest implements IDalTestable {
         var t2BoundarySelector = selector.setObjectVersion(2).setTagAsOf(MetadataCodec.encodeDatetime(t2BoundaryTime)).build();
         var t2PriorSelector = selector.setObjectVersion(2).setTagAsOf(MetadataCodec.encodeDatetime(t2PriorTime)).build();
 
-        var v2BoundaryTag = dal.loadObject(TEST_TENANT, v2BoundarySelector);
-        var v2PriorTag = dal.loadObject(TEST_TENANT, v2PriorSelector);
-        var t2BoundaryTag = dal.loadObject(TEST_TENANT, t2BoundarySelector);
-        var t2PriorTag = dal.loadObject(TEST_TENANT, t2PriorSelector);
+        var v2BoundaryTag = store.loadObject(TEST_TENANT, v2BoundarySelector);
+        var v2PriorTag = store.loadObject(TEST_TENANT, v2PriorSelector);
+        var t2BoundaryTag = store.loadObject(TEST_TENANT, t2BoundarySelector);
+        var t2PriorTag = store.loadObject(TEST_TENANT, t2PriorSelector);
 
         var expectedTag1 = v2Tag.toBuilder()
                 .setHeader(v2Tag.getHeader().toBuilder()
@@ -599,9 +599,9 @@ abstract class MetadataDalReadTest implements IDalTestable {
         Thread.sleep(10);
         var t2Tag = nextTag(v2Tag, UPDATE_TAG_VERSION);
 
-        dal.saveNewObjects(TEST_TENANT, Collections.singletonList(v1Tag));
-        dal.saveNewVersions(TEST_TENANT, Collections.singletonList(v2Tag));
-        dal.saveNewTags(TEST_TENANT, Collections.singletonList(t2Tag));
+        store.saveNewObjects(TEST_TENANT, Collections.singletonList(v1Tag));
+        store.saveNewVersions(TEST_TENANT, Collections.singletonList(v2Tag));
+        store.saveNewTags(TEST_TENANT, Collections.singletonList(t2Tag));
 
         var origId = UUID.fromString(v1Tag.getHeader().getObjectId());
 
@@ -620,11 +620,11 @@ abstract class MetadataDalReadTest implements IDalTestable {
         var t2BoundarySelector = selector.setObjectVersion(2).setTagAsOf(MetadataCodec.encodeDatetime(t2BoundaryTime)).build();
         var t2PriorSelector = selector.setObjectVersion(2).setTagAsOf(MetadataCodec.encodeDatetime(t2PriorTime)).build();
 
-        var batch = dal.loadObjects(TEST_TENANT, List.of(v2BoundarySelector, v2PriorSelector));
+        var batch = store.loadObjects(TEST_TENANT, List.of(v2BoundarySelector, v2PriorSelector));
         var v2BoundaryTag = batch.get(0);
         var v2PriorTag = batch.get(1);
 
-        var batch2 = dal.loadObjects(TEST_TENANT, List.of(t2BoundarySelector, t2PriorSelector));
+        var batch2 = store.loadObjects(TEST_TENANT, List.of(t2BoundarySelector, t2PriorSelector));
         var t2BoundaryTag = batch2.get(0);
         var t2PriorTag = batch2.get(1);
         var expextedv2Tag = v2Tag.toBuilder()
@@ -669,19 +669,19 @@ abstract class MetadataDalReadTest implements IDalTestable {
         var missing4 = selector.setObjectAsOf(MetadataCodec.encodeDatetime(asOfTime)).setLatestTag(true).build(); // as-of before object creation
 
         // Object should definitely be missing before it is saved!
-        assertThrows(EMetadataNotFound.class, () -> dal.loadObject(TEST_TENANT, missing1));
-        assertThrows(EMetadataNotFound.class, () -> dal.loadObject(TEST_TENANT, missing2));
-        assertThrows(EMetadataNotFound.class, () -> dal.loadObject(TEST_TENANT, missing3));
-        assertThrows(EMetadataNotFound.class, () -> dal.loadObject(TEST_TENANT, missing4));
+        assertThrows(EMetadataNotFound.class, () -> store.loadObject(TEST_TENANT, missing1));
+        assertThrows(EMetadataNotFound.class, () -> store.loadObject(TEST_TENANT, missing2));
+        assertThrows(EMetadataNotFound.class, () -> store.loadObject(TEST_TENANT, missing3));
+        assertThrows(EMetadataNotFound.class, () -> store.loadObject(TEST_TENANT, missing4));
 
         // Save an item
-        dal.saveNewObjects(TEST_TENANT, Collections.singletonList(origTag));
+        store.saveNewObjects(TEST_TENANT, Collections.singletonList(origTag));
 
         // No selectors should match
-        assertThrows(EMetadataNotFound.class, () -> dal.loadObject(TEST_TENANT, missing1));
-        assertThrows(EMetadataNotFound.class, () -> dal.loadObject(TEST_TENANT, missing2));
-        assertThrows(EMetadataNotFound.class, () -> dal.loadObject(TEST_TENANT, missing3));
-        assertThrows(EMetadataNotFound.class, () -> dal.loadObject(TEST_TENANT, missing4));
+        assertThrows(EMetadataNotFound.class, () -> store.loadObject(TEST_TENANT, missing1));
+        assertThrows(EMetadataNotFound.class, () -> store.loadObject(TEST_TENANT, missing2));
+        assertThrows(EMetadataNotFound.class, () -> store.loadObject(TEST_TENANT, missing3));
+        assertThrows(EMetadataNotFound.class, () -> store.loadObject(TEST_TENANT, missing4));
     }
 
     @Test
@@ -691,7 +691,7 @@ abstract class MetadataDalReadTest implements IDalTestable {
         var validTag = dummyTag(validDef, INCLUDE_HEADER);
         var validId = UUID.fromString(validTag.getHeader().getObjectId());
 
-        dal.saveNewObjects(TEST_TENANT, Collections.singletonList(validTag));
+        store.saveNewObjects(TEST_TENANT, Collections.singletonList(validTag));
 
         var validSelector = TagSelector.newBuilder()
                 .setObjectType(ObjectType.DATA)
@@ -717,19 +717,19 @@ abstract class MetadataDalReadTest implements IDalTestable {
         var missing4 = selector.setObjectAsOf(MetadataCodec.encodeDatetime(asOfTime)).setLatestTag(true).build(); // as-of before object creation
 
         // Object should definitely be missing before it is saved!
-        assertThrows(EMetadataNotFound.class, () -> dal.loadObjects(TEST_TENANT, List.of(validSelector, missing1)));
-        assertThrows(EMetadataNotFound.class, () -> dal.loadObjects(TEST_TENANT, List.of(validSelector, missing2)));
-        assertThrows(EMetadataNotFound.class, () -> dal.loadObjects(TEST_TENANT, List.of(validSelector, missing3)));
-        assertThrows(EMetadataNotFound.class, () -> dal.loadObjects(TEST_TENANT, List.of(validSelector, missing4)));
+        assertThrows(EMetadataNotFound.class, () -> store.loadObjects(TEST_TENANT, List.of(validSelector, missing1)));
+        assertThrows(EMetadataNotFound.class, () -> store.loadObjects(TEST_TENANT, List.of(validSelector, missing2)));
+        assertThrows(EMetadataNotFound.class, () -> store.loadObjects(TEST_TENANT, List.of(validSelector, missing3)));
+        assertThrows(EMetadataNotFound.class, () -> store.loadObjects(TEST_TENANT, List.of(validSelector, missing4)));
 
         // Save an item
-        dal.saveNewObjects(TEST_TENANT, Collections.singletonList(origTag));
+        store.saveNewObjects(TEST_TENANT, Collections.singletonList(origTag));
 
         // No selectors should match
-        assertThrows(EMetadataNotFound.class, () -> dal.loadObjects(TEST_TENANT, List.of(validSelector, missing1)));
-        assertThrows(EMetadataNotFound.class, () -> dal.loadObjects(TEST_TENANT, List.of(validSelector, missing2)));
-        assertThrows(EMetadataNotFound.class, () -> dal.loadObjects(TEST_TENANT, List.of(validSelector, missing3)));
-        assertThrows(EMetadataNotFound.class, () -> dal.loadObjects(TEST_TENANT, List.of(validSelector, missing4)));
+        assertThrows(EMetadataNotFound.class, () -> store.loadObjects(TEST_TENANT, List.of(validSelector, missing1)));
+        assertThrows(EMetadataNotFound.class, () -> store.loadObjects(TEST_TENANT, List.of(validSelector, missing2)));
+        assertThrows(EMetadataNotFound.class, () -> store.loadObjects(TEST_TENANT, List.of(validSelector, missing3)));
+        assertThrows(EMetadataNotFound.class, () -> store.loadObjects(TEST_TENANT, List.of(validSelector, missing4)));
     }
 
     @Test
@@ -739,7 +739,7 @@ abstract class MetadataDalReadTest implements IDalTestable {
         var origTag = dummyTag(origDef, INCLUDE_HEADER);
         var origId = UUID.fromString(origTag.getHeader().getObjectId());
 
-        dal.saveNewObjects(TEST_TENANT, Collections.singletonList(origTag));
+        store.saveNewObjects(TEST_TENANT, Collections.singletonList(origTag));
 
         var selector = TagSelector.newBuilder()
                 .setObjectType(ObjectType.MODEL)
@@ -748,7 +748,7 @@ abstract class MetadataDalReadTest implements IDalTestable {
                 .setLatestTag(true)
                 .build();
 
-        assertThrows(EMetadataWrongType.class, () -> dal.loadObject(TEST_TENANT, selector));
+        assertThrows(EMetadataWrongType.class, () -> store.loadObject(TEST_TENANT, selector));
     }
 
     @Test
@@ -762,7 +762,7 @@ abstract class MetadataDalReadTest implements IDalTestable {
         var origTag2 = dummyTag(origDef2, INCLUDE_HEADER);
         var origId2 = UUID.fromString(origTag2.getHeader().getObjectId());
 
-        dal.saveNewObjects(TEST_TENANT, List.of(origTag, origTag2));
+        store.saveNewObjects(TEST_TENANT, List.of(origTag, origTag2));
 
         // Two selectors in the batch
         // Only one has wrong type
@@ -781,6 +781,6 @@ abstract class MetadataDalReadTest implements IDalTestable {
                 .setLatestTag(true)
                 .build();
 
-        assertThrows(EMetadataWrongType.class, () -> dal.loadObjects(TEST_TENANT, List.of(selector, selector2)));
+        assertThrows(EMetadataWrongType.class, () -> store.loadObjects(TEST_TENANT, List.of(selector, selector2)));
     }
 }
